Made the navbar position fixed and so that it inherits color and background color with a high z-index so it always is upfront, also made a toggle and close function for when the nav is in mobile mode. Reson for this is so if for example a user press on 'action' the nav will close after that click

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -13,4 +13,5 @@ html, body {
   min-height: 100vh;
   margin: 0;
   padding: 0;
+  padding-top: 4rem;
 }
